--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -12,7 +12,7 @@
     <ProductVersion>10.0.20506</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
     <RootNamespace></RootNamespace>
-    <ProjectGuid>{3c2285ec-0f5f-9d1f-b45a-9d9bc3ba2dec}</ProjectGuid>
+    <ProjectGuid>{fda2741e-c04c-5b5e-f7c0-da2fe3bdab07}</ProjectGuid>
     <ProjectTypeGuids>{E097FAD1-6243-4DAD-9C02-E9B9EFC3FFC1};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
@@ -43,16 +43,16 @@
   <ItemGroup>
     <Compile Include="Assets\Game\Script\UI\Base\UIController.cs" />
     <Compile Include="Assets\Game\Script\UI\UIManager.cs" />
+    <Compile Include="Assets\Game\Script\UI\Start\UIStartView.cs" />
+    <Compile Include="Assets\Game\Script\GamePlay\TTTManager.cs" />
     <Compile Include="Assets\Game\Script\GameApp.cs" />
+    <Compile Include="Assets\Game\Script\GamePlay\TTTAI.cs" />
     <Compile Include="Assets\Game\Script\UI\UIRes.cs" />
     <Compile Include="Assets\Game\Script\GamePlay\GameSceneMain.cs" />
     <Compile Include="Assets\Game\Script\UI\WorkDesign\AddressablePlus\AddressablePlus.cs" />
     <Compile Include="Assets\Game\Script\UI\Checkerboard\UIChecker.cs" />
     <Compile Include="Assets\Game\Script\UI\Tip\UITip.cs" />
     <Compile Include="Assets\Game\Script\UI\Checkerboard\UICheckerBoard.cs" />
-    <Compile Include="Assets\Game\Script\UI\Start\UIStartView.cs" />
-    <Compile Include="Assets\Game\Script\GamePlay\TTTManager.cs" />
-    <Compile Include="Assets\Game\Script\GamePlay\TTTAI.cs" />
     <Reference Include="UnityEngine">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.34f1c1\Editor\Data\Managed\UnityEngine\UnityEngine.dll</HintPath>
     </Reference>
@@ -303,13 +303,13 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.34f1c1\Editor\Data\Managed\UnityEngine\UnityEditor.UnityConnectModule.dll</HintPath>
     </Reference>
     <Reference Include="GameFramework">
-      <HintPath>D:\UnityDemo\TicTacToe\Assets\Plugins\GameFramework.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Assets\Plugins\GameFramework.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Antlr3.Runtime">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\PackageCache\com.unity.visualscripting@1.9.1\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\PackageCache\com.unity.visualscripting@1.9.1\Runtime\VisualScripting.Flow\Dependencies\NCalc\Unity.VisualScripting.Antlr3.Runtime.dll</HintPath>
     </Reference>
     <Reference Include="ReportGeneratorMerged">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\PackageCache\com.unity.testtools.codecoverage@1.2.4\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\PackageCache\com.unity.testtools.codecoverage@1.2.4\lib\ReportGenerator\ReportGeneratorMerged.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.iOS.Extensions.Xcode">
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.34f1c1\Editor\Data\PlaybackEngines\iOSSupport\UnityEditor.iOS.Extensions.Xcode.dll</HintPath>
@@ -690,96 +690,96 @@
       <HintPath>C:\Program Files\Unity\Hub\Editor\2021.3.34f1c1\Editor\Data\NetStandard\compat\2.1.0\shims\netfx\System.Xml.Serialization.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.Flow.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VSCode.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VSCode.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.CacheServer">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\UnityEditor.CacheServer.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\UnityEditor.CacheServer.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.TextMeshPro.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualStudio.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualStudio.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Performance.Profile-Analyzer.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Performance.Profile-Analyzer.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Model">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Model.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Addressables">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Addressables.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Addressables.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Timeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.Core.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TextMeshPro">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.TextMeshPro.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.State.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.SettingsProvider.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.SettingsProvider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.OpenCover.Mono.Reflection.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ResourceManager">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.ResourceManager.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.ResourceManager.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Flow">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.Flow.dll</HintPath>
     </Reference>
     <Reference Include="UnityEditor.UI">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\UnityEditor.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.PlasticSCM.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.PlasticSCM.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Rider.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Rider.Editor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.UI">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Core">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.Core.dll</HintPath>
     </Reference>
     <Reference Include="Unity.EditorCoroutines.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.EditorCoroutines.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.Shared.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.Shared.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Timeline.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Timeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ScriptableBuildPipeline">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.ScriptableBuildPipeline.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.ScriptableBuildPipeline.dll</HintPath>
     </Reference>
     <Reference Include="Unity.Addressables.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.Addressables.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.Addressables.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.ScriptableBuildPipeline.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.ScriptableBuildPipeline.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.ScriptableBuildPipeline.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.TestTools.CodeCoverage.Editor">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.TestTools.CodeCoverage.Editor.dll</HintPath>
     </Reference>
     <Reference Include="Unity.VisualScripting.State">
-      <HintPath>D:\UnityDemo\TicTacToe\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
+      <HintPath>D:\UnityDemo\TicTacToe_Demo\Library\ScriptAssemblies\Unity.VisualScripting.State.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="GR_Game_FrameWork.csproj">
-      <Project>{27e9ba4a-be12-d7b8-65aa-8c507aa41787}</Project>
+      <Project>{c02f877c-a62c-b315-b5f2-6630db9e9efe}</Project>
       <Name>GR_Game_FrameWork</Name>
     </ProjectReference>
   </ItemGroup>
